# APMS2

./: AStar.cpp  AStar.h  AlgoQueue.h  AlgoStack.cpp  AlgoStack.h  BestFirstSeracher.cpp  BestFirstSeracher.h  Bfs.cpp  Bfs.h  Boot.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DataManager.h  Dfs.cpp  Dfs.h  FileCacheManager.cpp  FileCacheManager.h  ISearcher.cpp  ISearcher.h  MatrixHandler.cpp  MatrixHandler.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  ParallelServer.cpp  ParallelServer.h  QueuePriority.cpp  QueuePriority.h  README.md  Searchable.cpp  Searchable.h  SearchableforMatrix.cpp  SearchableforMatrix.h  Searcher.cpp  Searcher.h  Solver.cpp  (+13 more)
